2006-09-20  Rodney Dawes  <dobey@novell.com>

	* scripts/zen-installer.py: Update to use the python module stuff for
	scanning the program for accessibility issues

2006-09-18  Rodney Dawes  <dobey@novell.com>

	* scripts/gnome-system-monitor.py: Scan the about box too, now that
	we can handle the (C) character

2006-09-18  Rodney Dawes  <dobey@novell.com>

	* scripts/gimp.py: Update script to check more dialogs in GIMP, and
	document a couple LDTP bugs that automating GIMP exposes

2006-09-18  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestUtils.py (__print_properties): Always convert the
	componentName to utf8 and write out the utf8 to the HTML log

	* scripts/banshee.py: Update the banshee script to be more complete
	and to go through all the dialogs

	* scripts/gedit.py: Scan the about box as well

	* scripts/realplay.py: Scan the about box as well, and fix the
	window_title to not conflict with the about box title

2006-09-07  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 2.15.0 for release (gnome 2.16 target)

2006-09-07  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: Need to add find-python-path.py to EXTRA_DIST

2006-09-05  Rodney Dawes  <dobey@novell.com>

	* scripts/gnome-font-properties.py: Peek at the font details dialog

	* scripts/gnome-keyboard-properties.py: Peek at the layout dialog

	* scripts/gnome-theme-manager.py: Peek at the theme details dialog

2006-09-01  Rodney Dawes  <dobey@novell.com>

	* scripts/gnome-background-properties.py: Use Finish button on HEAD

	* scripts/gnome-passwd.py: Run the right program here

2006-08-24  Rodney Dawes  <dobey@novell.com>

	* scripts/gnome-*-properties.py:
	* scripts/gnome-*-preferences.py:
	Add some more scripts to scan for a11y properties in control-center

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestUtils.py: Add GPL notice into copyright header
	comment block

2006-08-18  Rodney Dawes  <dobey@novell.com>
